--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <!-- header -->
-    <header class="max-w-screen-xl mx-auto">
+    <header class="max-w-screen-xl text-center md:mx-20">
       <nav
-        class="flex justify-between items-center bg-[#F85559] rounded-full px-4 py-3 text-white "
+        class=" flex flex-col items-center gap-4 md:flex-row md:justify-between md:items-center  md:bg-[#F85559] md:rounded-full px-4 py-3 md:text-white"
       >
         <div class="">
           <ul class="flex gap-8 capitalize">
@@ -34,9 +34,9 @@
         </div>
         <div class="flex items-center">
           <img class="mr-1" src="images/logo.png" alt="logo" />
-          <span class="text-lg font-bold">Fruit Burst</span>
+          <span class="text-md font-bold">Fruit Burst</span>
         </div>
-        <div class="rounded-full p-2 bg-white text-black">
+        <div class="rounded-full p-2 bg-[#F85559]  md:bg-white text-black">
           <input
             class="rounded-full border-none outline-none pl-2"
             name="Search"
@@ -51,7 +51,31 @@
       </nav>
     </header>
     <!-- main -->
-    <main></main>
+    <main>
+      <!-- section hero -->
+      <section class="max-w-screen-xl mx-20 mt-10">
+        <div
+          class="hero rounded-lg"
+          style="background-image: url(./images/banner4.png)"
+        >
+          <div class="hero-overlay  rounded-lg"></div>
+          <div class="hero-content text-center h-[400px] text-white">
+            <div class="">
+              <h1 class="mb-5 text-5xl font-bold">
+                Exotic tastes at your <br />
+                doorstep
+              </h1>
+              <p class="mb-5">We supply highly quality organic products</p>
+              <button
+                class="btn bg-[#F85559] border-none text-white font-semibold"
+              >
+                shop now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer -->
     <footer></footer>
   </body>
