--- a/index.html
+++ b/index.html
@@ -90,17 +90,21 @@
       </section>
 
       <!-- section rating -->
-      <section class="max-w-screen-xl md:mx-20 md:my-36">
-        <div class="flex justify-between">
-          <div class="max-w-md">
-            <h2 class="text-4xl font-extrabold mb-6">Deal of the day</h2>
+      <section class="max-w-screen-xl justify-center md:mx-20 md:my-36">
+        <div
+          class="flex-col flex px-12 md:px-0 text-center md:flex-row md:justify-between"
+        >
+          <div class="md:text-left md:max-w-md">
+            <h2 class="text-xl md:text-4xl font-extrabold mb-6">
+              Deal of the day
+            </h2>
             <p>
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
             </p>
           </div>
-          <div class="flex gap-8">
+          <div class="justify-center flex gap-8">
             <div class="border-r pr-2 border-black border-dotted">
               <h3 class="text-4xl font-extrabold mb-6">29</h3>
               <p>Days</p>
@@ -120,7 +124,7 @@
           </div>
         </div>
         <!-- container card -->
-        <div class="grid gap-4 grid-cols-4 mt-12">
+        <div class="grid-cols-1 grid gap-4 md:grid-cols-4 mt-12">
           <div class="flex flex-col gap-4 items-center h-96 shadow my-4">
             <img class="w-24 mb-5" src="images/fruit7.png" alt="fruit-apple" />
             <p class="mb-4 text-2xl font-bold">12.90$ - 18.85$</p>
@@ -173,7 +177,6 @@
                 type="radio"
                 name="rating-2"
                 class="mask mask-star-2 bg-[#F85559]"
-                
               />
               <input
                 type="radio"
@@ -204,28 +207,28 @@
               <input
                 type="radio"
                 name="rating-2"
-            class="mask mask-star-2 bg-[#F85559]"
+                class="mask mask-star-2 bg-[#F85559]"
               />
               <input
                 type="radio"
                 name="rating-2"
-            class="mask mask-star-2 bg-[#F85559]"
+                class="mask mask-star-2 bg-[#F85559]"
                 checked
               />
               <input
                 type="radio"
                 name="rating-2"
-            class="mask mask-star-2 bg-[#F85559]"
+                class="mask mask-star-2 bg-[#F85559]"
               />
               <input
                 type="radio"
                 name="rating-2"
-            class="mask mask-star-2 bg-[#F85559]"
+                class="mask mask-star-2 bg-[#F85559]"
               />
               <input
                 type="radio"
                 name="rating-2"
-            class="mask mask-star-2 bg-[#F85559]"
+                class="mask mask-star-2 bg-[#F85559]"
               />
             </div>
             <p>Details</p>
@@ -268,8 +271,67 @@
           </div>
         </div>
       </section>
+
+      <!-- section team members -->
+      <section class="max-w-screen-xl md:mx-20">
+        <div
+          class="hero min-h-screen"
+          style="
+            background-image: url(images/banner1.png);
+            background-repeat: no-repeat;
+          "
+        >
+          <div class="hero-overlay bg-opacity-80"></div>
+          <div class="hero-content px-0 text-center text-neutral-content">
+            <div class="max-w-lg">
+              <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+              <p class="mb-5">
+                Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                assumenda excepturi exercitationem quasi. In deleniti eaque aut
+                repudiandae et a id nisi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer class="footer footer-center p-28 bg-black text-primary-content">
+      <div>
+        <div class="flex items-center">
+          <img class="mr-1" src="images/logo.png" alt="logo" />
+          <span class="text-md font-bold">Fruit Burst</span>
+        </div>
+        <ul class="capitalize flex gap-16">
+          <li><a href="">HOME</a></li>
+          <li><a href="">ABOUT US </a></li>
+          <li><a href="">ALL fruits</a></li>
+          <li><a href="">shop</a></li>
+          <li><a href="">SUPPORT</a></li>
+          <li><a href="">MY ACCOUNT</a></li>
+        </ul>
+      </div>
+      <div>
+        <div class="grid grid-flow-col gap-4">
+          <ul class="flex gap-8">
+            <li>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-pinterest"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
