finished assignment with responsive layouts

--- a/index.html
+++ b/index.html
@@ -274,35 +274,221 @@
 
       <!-- section team members -->
       <section class="max-w-screen-xl md:mx-20">
-        <div
-          class="hero min-h-screen"
-          style="
-            background-image: url(images/banner1.png);
-            background-repeat: no-repeat;
-          "
-        >
-          <div class="hero-overlay bg-opacity-80"></div>
-          <div class="hero-content px-0 text-center text-neutral-content">
-            <div class="max-w-lg">
-              <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+        <div class="hero" style="background-image: url(./images/team.png)">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="text-neutral-content py-20">
+            <div class="text-center md:px-32">
+              <h1 class="mb-5 text-4xl font-bold">Meet the team section</h1>
               <p class="mb-5">
-                Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                assumenda excepturi exercitationem quasi. In deleniti eaque aut
-                repudiandae et a id nisi.
+                Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical Latin literature from 45 BC,
+                making it over 2000 years old.
               </p>
+            </div>
+
+            <div
+              class="flex flex-col justify-center md:flex-row gap-20 mx-auto"
+            >
+              <div class="w-96 md:w-auto">
+                <div class="flex justify-center items-cente my-7">
+                  <img src="images/member1.png" alt="team member1" />
+                </div>
+                <h4 class="text-2xl font-bold text-center">Awlad Hossain</h4>
+                <p class="text-center">Fruits Expert</p>
+                <ul
+                  class="flex gap-4 justify-center items-center text-[#F85559]"
+                >
+                  <li><a href=""></a><i class="fa-brands fa-facebook"></i></li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="w-96 md:w-auto">
+                <div class="flex justify-center items-cente my-7">
+                  <img src="images/member2.png" alt="team member1" />
+                </div>
+                <h4 class="text-2xl font-bold text-center">Sarder Sujon</h4>
+                <p class="text-center">Fruits Expert</p>
+                <ul
+                  class="flex gap-4 justify-center items-center text-[#F85559]"
+                >
+                  <li><a href=""></a><i class="fa-brands fa-facebook"></i></li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="w-96 md:w-auto">
+                <div class="flex justify-center items-cente my-7">
+                  <img src="images/member3.png" alt="team member1" />
+                </div>
+                <h4 class="text-2xl font-bold text-center">Awlad Hossain</h4>
+                <p class="text-center">Fruits Expert</p>
+                <ul
+                  class="flex gap-4 justify-center items-center text-[#F85559]"
+                >
+                  <li><a href=""></a><i class="fa-brands fa-facebook"></i></li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="w-96 md:w-auto">
+                <div class="flex justify-center items-cente my-7">
+                  <img src="images/member4.png" alt="team member1" />
+                </div>
+                <h4 class="text-2xl font-bold text-center">Awlad Hossain</h4>
+                <p class="text-center">Fruits Expert</p>
+                <ul
+                  class="flex gap-4 justify-center items-center text-[#F85559]"
+                >
+                  <li><a href=""></a><i class="fa-brands fa-facebook"></i></li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section why to chose us -->
+      <section class="max-w-screen-xl my-28 md:mx-20">
+        <div class="text-center mx-5 md:px-[120px]">
+          <h3 class="text-xl md:text-4xl font-extrabold mb-6">Why Choose Us</h3>
+          <p>
+            Contrary to popular belief, is not simply random text. It has roots
+            in a piece of classical Latin literature from 45 BC, making it over
+            2000 years old.
+          </p>
+        </div>
+
+        <!-- container details about us -->
+        <div class="grid-cols-1 mx-5 grid md:grid-cols-3 gap-12 mt-12">
+          <div>
+            <div class="md:flex items-start mb-12 gap-6">
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <div class="md:flex items-start mb-12 gap-6">
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <div class="md:flex items-start mb-12 gap-6">
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./images/whychoose1.png" alt="" />
+          </div>
+          <div>
+            <div class="flex items-start mb-12 gap-6">
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
+            </div>
+            <div class="flex items-start mb-12 gap-6">
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
+            </div>
+            <div class="flex items-start mb-12 gap-6">
+              <div class="">
+                <h4 class="text-2xl font-extrabold mb-4">Dedicated Team</h4>
+                <div class="w-24 h-[2px] bg-gray-600"></div>
+                <p class="mt-4">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div
+                class="bg-slate-500 text-white rounded-full p-6 w-16 h-16 flex justify-center items-center"
+              >
+                <i class="fa-solid fa-users"></i>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer footer-center p-28 bg-black text-primary-content">
+    <footer
+      class="footer footer-center text-center md:p-28 bg-black text-primary-content"
+    >
       <div>
-        <div class="flex items-center">
+        <div class="flex text-left items-center">
           <img class="mr-1" src="images/logo.png" alt="logo" />
           <span class="text-md font-bold">Fruit Burst</span>
         </div>
-        <ul class="capitalize flex gap-16">
+        <ul class="capitalize flex gap-16 flex-wrap">
           <li><a href="">HOME</a></li>
           <li><a href="">ABOUT US </a></li>
           <li><a href="">ALL fruits</a></li>
